welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: identifier expected but '=' found.
var fini : = false
           ^